# planet_download

./: .env.example  .flake8  .gitignore  LICENSE.txt  README.md  base.env  config.yaml  environment.yml  estuary.sh  lint.sh  pyproject.toml  requirements.txt  run.sh  setup.py  start_jupyter.sh  test_config.yaml
configs/: download.example.yaml
notebooks/: inspect.ipynb  run.ipynb
src/: config.py  download_udms.py  grid.py  inspect_grid_outputs.py  notebook_helper.py  order_images.py  run.py  select_udms.py  tides.py  unzip_downloads.py  util.py
src/scripts/: copy_to_process_dir.py  download_udms.py  extract_grid_intermediates.py  order_create.py  order_download.py  order_images.py  run.py  run_date_range.py  run_once.py  select_udms.py  udm_activate.py  udm_cleanup.py  udm_download.py  udm_search.py  udm_select.py
