[build-system]
requires = ["setuptools>=75.0", "wheel>=0.44"]
build-backend = "setuptools.build_meta"

[project]
name = "planet-download"
version = "0.1.0"
description = "Download Planet data based on predefined grids."
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [{ name = "Kyle Dorman" }]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 120
known_third_party = ["wandb"]

[tool.pyright]
include = ["."]

typeCheckingMode = "basic"
useLibraryCodeForTypes = true
pythonPlatform = "Linux"
pythonVersion = "3.12"
verboseOutput = true

reportMissingImports = true
reportMissingTypeStubs = false
reportGeneralTypeIssues = "warning"
reportPrivateImportUsage = "none"
reportUnboundVariable = "warning"

[tool.autopep8]
max_line_length = 120
ignore = ["W503"]
in-place = true
recursive = true
experimental = true
aggressive = 3
verbose = false
